<resources>
    <string name="app_name">Smart Notes</string>
    <string name="bt_create_note">Создать Заметку</string>
    <string name="bt_cancel">Отмена/Назад</string>
    <string name="bt_save">Сохранить</string>
    <string name="edit_text_title">Введите заголовок</string>
    <string name="edit_text_content">Введите записку</string>
    <string name="backBt">Назад</string>
    <string name="edit_menu">Правка</string>
    <string name="delete_menu">Удалить</string>
    <string name="save_to_file">Экспорт в файл</string>
    <string name="text_not_found_entry">Не было создано записей</string>
    <string name="low_priority">Низкий приоритет</string>
    <string name="medium_priority">Средний приоритет</string>
    <string name="high_priority">Высокий приоритет</string>
    <string name="checked_auto">Автоопределение места</string>
    <string name="maps_checked">Определить место на карте</string>
    <string name="runMap">Карта</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_image">Добавить изображение</string>
    <string name="add_image_btn">Добавить изображение</string>
    <string name="hint_text">Enter your text here</string>
    <string name="search">Поиск</string>
    <string name="create_notes_title">Создание заметки</string>
</resources>
