<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/cancelBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:src="@drawable/ic_action_back"
        android:text="@string/bt_cancel"
        android:textAlignment="center"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_action_bar_title"
        android:text="@string/create_notes_title"
        android:textColor="@color/textColor"
        android:textSize="24sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/saveBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:src="@drawable/ic_action_save"
        android:text="@string/bt_save"
        android:layout_alignParentEnd="true" />

</RelativeLayout>