<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alexa.notes.CreateEdit_activity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayoutButton">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancelBt"
                android:text="@string/bt_cancel"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_gravity="top"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saveBt"
                android:text="@string/bt_save"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_gravity="top"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#7b7b7b"
            android:layout_below="@+id/linearLayoutButton"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/linearLayoutButton"
            tools:ignore="UnknownId">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayoutEditTextTitle">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextTitle"
                    android:textAlignment="center"
                    android:hint="@string/edit_text_title" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/linearLayoutEditTextTitle">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:textAlignment="viewStart"
                    android:hint="@string/edit_text_content"
                    android:id="@+id/editTextContent"
                    android:lines="12"
                    android:minLines="10"
                    android:maxLines="20"
                    android:scrollbars="vertical"
                    android:gravity="start" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
